@@ -1,3 +1,7 @@
+2007-04-03  Gary Benson  <gbenson@redhat.com>
+
+	* gnu/testlet/java/util/Calendar/dstOffset.java: New test.
+
 2007-03-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/testlet/javax/management/openmbean/CompositeDataInvocationHandler/Person.java:
